# File-Sorter

./: .gitignore  CMakeLists.txt
src/: main.cpp
